excluding /healthz from middleware and adding a check for kube headers
